# light_control

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: logging.py  main.py  models.py  security.py  settings.py  utils.py
app/libs/: pager.py  security.py  sqlite.py
app/repositories/: __init__.py  action.py  user.py
app/routers/: __init__.py  auth.py  frontend.py  light_control.py
app/routers/api/: auth.py  light_control.py
app/services/: __init__.py  lamp_control.py
bare_install/: TODO  install.sh  server_start.sh  server_stop.sh  uninstall.sh
bare_install/adminer/plugins/: version-noverify.php
bare_install/apache/: 000-default.conf.src  adminer.conf  install.sh  uninstall.sh
bare_install/apache/etc/adminer/: conf.php
bare_install/apache/etc/apache2/sites-enabled/: 000-default.conf
bare_install/etc/apache2/sites-enabled/: 000-default.conf
bare_install/nginx/: install.sh  light_control.src  uninstall.sh
bare_install/systemd/: install.sh  light-control.service.src  uninstall.sh
front/: TODO  index.html  login.html
front/pages/: main.html  plan.html
front/static/: index_script.js  index_style.css  lamp_picker_style.css  lamp_script.js  login_script.js  login_style.css  slider_script.js  slider_style.css
front/static/scripts/: index_script.js  lamp_script.js  login_script.js  main_script.js  slider_script.js  utils.js
front/static/styles/: index_style.css  lamp_picker_style.css  login_style.css  slider_style.css
front/templates/: index.html  login.html
volumes/adminer/: login-password-less.php
(+2 files in other folders)
