[project]
name = "light_control"
version = "0.1.0"
description = ""
authors = [{ name = "Andrew Laptev", email = "nickname.avast@gmail.com" }]
dependencies = [
    "fastapi[all]~=0.95.1",
    "python-jose[cryptography]~=3.3.0",
    "aiosqlite~=0.19.0",
    "fastapi-mqtt==1.0.7",
    "gunicorn~=20.1.0",
]
requires-python = "~=3.10.6"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
