[project]
name = "light_control"
version = "0.1.0"
description = ""
authors = [{ name = "Andrew Laptev", email = "nickname.avast@gmail.com" }]
dependencies = [
    "fastapi[all]~=0.95.1",
    "python-jose~=3.3.0",
    "aiosqlite~=0.19.0",
    "fastapi-mqtt~=1.0.9",
]
requires-python = ">=3.9.2"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
